WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284383
REGRESSION(
287485@main
): [ macOS ] 2x TestWebKitAPI.WebPushD(api-tests) are constantly failing
https://bugs.webkit.org/show_bug.cgi?id=284383
Summary
REGRESSION(287485@main): [ macOS ] 2x TestWebKitAPI.WebPushD(api-tests) are c...
Dawn Morningstar
Reported
2024-12-10 10:32:07 PST
TestWebKitAPI.WebPushD.WKWebPushDaemonConnectionPushNotifications [ Failure ] TestWebKitAPI.WebPushDBuiltInTest.ImplicitSilentPushTimerCancelledOnShowingNotification [ Crash ] These two API tests are constant failures after
287485@main
https://commits.webkit.org/287485@main
History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.WebPushD.WKWebPushDaemonConnectionPushNotifications&test=TestWebKitAPI.WebPushDBuiltInTest.ImplicitSilentPushTimerCancelledOnShowingNotification
Test-run:
https://build.webkit.org/#/builders/949/builds/5239
Stdio:
https://build.webkit.org/#/builders/1224/builds/681/steps/19/logs/stdio
TestWebKitAPI.WebPushD.WKWebPushDaemonConnectionPushNotifications Failed to connect to mach service org.webkit.webpushtestdaemon.service, reason: failed at lookup with error 3 - No such process /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:2645 Expected equality of these values: notifications.count Which is: 0 1u Which is: 1 /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:2692 Expected equality of these values: notifications.count Which is: 0 2u Which is: 2 /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:2700 Expected equality of these values: notifications.count Which is: 0 1u Which is: 1 /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:2710 Expected equality of these values: notifications.count Which is: 0 1u Which is: 1 /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:2722 Expected equality of these values: notifications.count Which is: 0 1u Which is: 1 TestWebKitAPI.WebPushDBuiltInTest.ImplicitSilentPushTimerCancelledOnShowingNotification 2024-12-10 07:22:49.466 TestWebKitAPI[53872:2989969] +[IMKClient subclass]: chose IMKClient_Legacy ERROR: Cannot exclude path '/Users/buildbot/Library/WebKit/com.apple.WebKit.TestWebKitAPI/WebsiteDataStore/0bf5053b-164c-4b7d-8179-832e6bf158df/MediaCache' from backup with error 'The file “MediaCache” doesn’t exist.' /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WTF/wtf/cocoa/FileSystemCocoa.mm(261) : bool WTF::FileSystemImpl::setExcludedFromBackup(const String &, bool) ERROR: Cannot exclude path '/Users/buildbot/Library/WebKit/com.apple.WebKit.TestWebKitAPI/WebsiteDataStore/940e7729-738e-439f-a366-1a8719e23b2d/MediaCache' from backup with error 'The file “MediaCache” doesn’t exist.' /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WTF/wtf/cocoa/FileSystemCocoa.mm(261) : bool WTF::FileSystemImpl::setExcludedFromBackup(const String &, bool) ERROR: Cannot exclude path '/Users/buildbot/Library/WebKit/com.apple.WebKit.TestWebKitAPI/WebsiteDataStore/940e7729-738e-439f-a366-1a8719e23b2d/MediaCache' from backup with error 'The file “MediaCache” doesn’t exist.' /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WTF/wtf/cocoa/FileSystemCocoa.mm(261) : bool WTF::FileSystemImpl::setExcludedFromBackup(const String &, bool) Failed to connect to mach service org.webkit.webpushtestdaemon.service, reason: failed at lookup with error 3 - No such process ASSERTION FAILED: m_shouldIncrementProtocolVersionForTesting /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm(280) : auto TestWebKitAPI::WebPushXPCConnectionMessageSender::performSendWithAsyncReplyWithoutUsingIPCConnection(UniqueRef<IPC::Encoder> &&, CompletionHandler<void (IPC::Decoder *)> &&)::(anonymous class)::operator()(xpc_object_t) 1 0x109ae427e TestWebKitAPI::WebPushXPCConnectionMessageSender::performSendWithAsyncReplyWithoutUsingIPCConnection(WTF::UniqueRef<IPC::Encoder>&&, WTF::CompletionHandler<void (IPC::Decoder*)>&&) const::$_0::operator()(NSObject<OS_xpc_object>*) 2 0x109ae4705 WTF::BlockPtr<void (NSObject<OS_xpc_object>*)> WTF::BlockPtr<void (NSObject<OS_xpc_object>*)>::fromCallable<TestWebKitAPI::WebPushXPCConnectionMessageSender::performSendWithAsyncReplyWithoutUsingIPCConnection(WTF::UniqueRef<IPC::Encoder>&&, WTF::CompletionHandler<void (IPC::Decoder*)>&&) const::$_0>(TestWebKitAPI::WebPushXPCConnectionMessageSender::performSendWithAsyncReplyWithoutUsingIPCConnection(WTF::UniqueRef<IPC::Encoder>&&, WTF::CompletionHandler<void (IPC::Decoder*)>&&) const::$_0)::'lambda'(void*, NSObject<OS_xpc_object>*)::operator()(void*, NSObject<OS_xpc_object>*) const 3 0x109ae46d1 WTF::BlockPtr<void (NSObject<OS_xpc_object>*)> WTF::BlockPtr<void (NSObject<OS_xpc_object>*)>::fromCallable<TestWebKitAPI::WebPushXPCConnectionMessageSender::performSendWithAsyncReplyWithoutUsingIPCConnection(WTF::UniqueRef<IPC::Encoder>&&, WTF::CompletionHandler<void (IPC::Decoder*)>&&) const::$_0>(TestWebKitAPI::WebPushXPCConnectionMessageSender::performSendWithAsyncReplyWithoutUsingIPCConnection(WTF::UniqueRef<IPC::Encoder>&&, WTF::CompletionHandler<void (IPC::Decoder*)>&&) const::$_0)::'lambda'(void*, NSObject<OS_xpc_object>*)::__invoke(void*, NSObject<OS_xpc_object>*) 4 0x7ff80083e718 _xpc_connection_reply_callout 5 0x7ff80083e697 _xpc_connection_call_reply_async 6 0x7ff80098b848 _dispatch_client_callout3 7 0x7ff8009a5d5a _dispatch_mach_msg_async_reply_invoke 8 0x7ff800997c76 _dispatch_main_queue_drain 9 0x7ff800997975 _dispatch_main_queue_callback_4CF 10 0x7ff800c5651e __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ 11 0x7ff800c17b2b __CFRunLoopRun 12 0x7ff800c16b6c CFRunLoopRunSpecific 13 0x7ff801c3ce59 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 14 0x109b8ab63 TestWebKitAPI::Util::run(bool*) 15 0x109a88818 TestWebKitAPI::WebPushDTestWebView::injectPushMessage(NSDictionary*) 16 0x109a9081d TestWebKitAPI::WebPushDBuiltInTest_ImplicitSilentPushTimerCancelledOnShowingNotification_Test::TestBody() 17 0x109c93adb void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 18 0x109c471aa void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 19 0x109c470f3 testing::Test::Run() 20 0x109c48112 testing::TestInfo::Run() 21 0x109c4925c testing::TestSuite::Run() 22 0x109c58c7c testing::internal::UnitTestImpl::RunAllTests() 23 0x109c9891b bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 24 0x109c5862a bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 25 0x109c58515 testing::UnitTest::Run() 26 0x108d9ebb1 RUN_ALL_TESTS() 27 0x108d9eb46 TestWebKitAPI::TestsController::run(int, char**) 28 0x109c2df83 main 29 0x7ff8007a52cd start
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-10 10:32:54 PST
<
rdar://problem/141230069
>
Brady Eidson
Comment 2
2024-12-12 22:51:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37894
EWS
Comment 3
2024-12-12 23:43:00 PST
Committed
287786@main
(8a50c3abc000): <
https://commits.webkit.org/287786@main
> Reviewed commits have been landed. Closing PR #37894 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug