Remove overzealous and incorrect RELEASE_ASSERT causing API test issues https://bugs.webkit.org/show_bug.cgi?id=284383 rdar://141230069

Unreviewed.

This was added in 287485@main in error.

* Source/WebKit/webpushd/WebPushDaemon.mm:
(WebPushD::WebPushDaemon::showNotification):

Canonical link: https://commits.webkit.org/287786@main